--- a/issuers.html
+++ b/issuers.html
@@ -85,10 +85,14 @@
             <thead>
               <tr>
                 <th>Name</th>
-                <th>Tax ID</th>
-                <th>Email</th>
-                <th>Phone</th>
+                <th>Tax ID / CUI</th>
+                <th>Tax ID / Nr. Registrul Comertului</th>
                 <th>Address</th>
+                <th>Bank Name</th>
+                <th>Bank Account</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>Website</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -96,20 +100,28 @@
               <tr>
                 <td>ABC Solutions SRL</td>
                 <td>RO12345678</td>
-                <td>contact@abc.ro</td>
-                <td>+40 721 123 456</td>
+                <td>YAAAAXXXXXXJJC</td>
                 <td>Bucharest, Romania</td>
+                <td>ING BANK Romania S.A.</td>
+                <td>RO66BACX0000001234567890</td>
+                <td>+40 721 123 456</td>
+                <td>contact@abc.ro</td>
+                <td>https://www.abc.ro</td>
                 <td>
                   <button class="btn small">✏️ Edit</button>
                   <button class="btn small danger">🗑️ Delete</button>
                 </td>
               </tr>
               <tr>
-                <td>John Doe</td>
-                <td>-</td>
-                <td>john@example.com</td>
-                <td>+40 765 432 109</td>
-                <td>Cluj, Romania</td>
+                <td>ABC Solutions SRL</td>
+                <td>RO12345678</td>
+                <td>YAAAAXXXXXXJJC</td>
+                <td>Bucharest, Romania</td>
+                <td>ING BANK Romania S.A.</td>
+                <td>RO66BACX0000001234567890</td>
+                <td>+40 721 123 456</td>
+                <td>contact@abc.ro</td>
+                <td>https://www.abc.ro</td>
                 <td>
                   <button class="btn small">✏️ Edit</button>
                   <button class="btn small danger">🗑️ Delete</button>
